--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bulma": "^0.9.3",
     "core-js": "^3.6.5",
     "pinia": "^2.0.2",
     "vue": "^3.0.0",
@@ -26,6 +27,8 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
   }
 }
